--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Sogifti</string>
-    <string name="hello">Hello Interface!</string>
+    <string name="app_name">Sogifty</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     
     <string name="deleteModeBtnTrue">OK</string>
     <string name="deleteModeBtnFalse">Supprimer</string>
@@ -15,6 +13,8 @@
     
     <string name="empty_string">No String</string>
     
+  	<string name="connection_et_email">Enter your email address</string>
+    <string name="connection_et_password">Enter your password</string>  
+  	<string name="connection_b_connection">Connect</string>  
     
-
 </resources>
