--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -16,5 +16,11 @@
   	<string name="connection_et_email">Enter your email address</string>
     <string name="connection_et_password">Enter your password</string>  
   	<string name="connection_b_connection">Connect</string>  
+  	
+  	<string name="frienddetail_tv_nameFriend">Name</string>  
+  	<string name="frienddetail_tv_firstnameFriend">Firstname</string>  
+  	<string name="frienddetail_tv_RemainingDate">J-</string>  
+  	
+  	
     
 </resources>
