--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -21,6 +21,8 @@
   	<string name="frienddetail_tv_firstnameFriend">Firstname</string>  
   	<string name="frienddetail_tv_RemainingDate">J-</string>  
   	
+  	<string name="web_url_init">http://blabla</string>
+  	
   	
     
 </resources>
