Ajout gestion erreur champ connexion vide ET toutes les erreurs possibles dues à l'URL

--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -21,7 +21,7 @@
   	<string name="frienddetail_tv_firstnameFriend">Firstname</string>  
   	<string name="frienddetail_tv_RemainingDate">J-</string>  
   	
-  	<string name="web_url_init">http://blabla</string>
+  	<string name="web_url_init">https://www.google.fr/</string>
   	
   	
     
