--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -21,7 +21,7 @@
   	<string name="frienddetail_tv_firstnameFriend">Firstname</string>  
   	<string name="frienddetail_tv_RemainingDate">J-</string>  
   	
-  	<string name="web_url_init"> http://sogifty-api-env-dritfywq7z.elasticbeanstalk.com/api/user/</string>
+  	<string name="web_url_init">http://sogifty-api-env-9wjtpmmtjk.elasticbeanstalk.com/api/user</string>
   	
   	
     
