Ajout de la sélection d'avatar de l'application(petit problème de mémoire des foisqui a confirmer). Ajout de flèches d'indications sur le gift pager.Et p-e autre chose mais je sais plus quoi...

--- a/Client/res/values/strings.xml
+++ b/Client/res/values/strings.xml
@@ -81,6 +81,6 @@
   	
   	<string name="activity_friend_details_iv_friend_avatar">Avatar for the user</string>
   	
-  	
+  	<string name="chooseavatar_tv_title">Choisis ton avatar</string>
   	
 </resources>
